# cpu_model

./: .gitignore  CMakeLists.txt  IDE_ROADMAP.md  START_AETHER.bat  build_log.txt  fix.py  launch.js  measure_hdc.py  measure_ranks.py  multi_agent_conversation.py  train_english_nca.py
.agents/instructions/: core_agent.local.instructions.md
agentic_env/: CMakeLists.txt  curriculum_scheduler.hpp  env.hpp  replay_memory.cpp  replay_memory.hpp  sim_loop.cpp  sim_loop.hpp  tactical_env.cpp  tactical_env.hpp  test_memory.cpp  test_tactical.cpp  vec_env.cpp  vec_env.hpp  vscode_env.cpp  vscode_env.hpp
dashboard/: bridge.js  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: AetherApp.css  AetherApp.tsx  index.tsx
deployment/: CMakeLists.txt  aether_gateway.cpp  aether_server.cpp  aether_server.hpp  aether_socket.cpp  aether_socket.hpp  bootstrapper.cpp  creative_bridge.cpp  creative_bridge.hpp  nca_deploy.cpp  nca_deploy.h  peripheral_bridge.cpp  peripheral_bridge.hpp  silicon_ui.cpp  silicon_ui.hpp  test_alphabet.cpp  test_autonomous_dev.cpp  test_chatbot.cpp  test_conversation.cpp  test_creative_gen.cpp  test_deployment.cpp  test_ide_agent.cpp
encoding/: CMakeLists.txt  memory_probe.cpp  memory_probe.hpp  saliency_writer.cpp  saliency_writer.hpp  silicon_indexer.cpp  silicon_indexer.hpp  state_encoder.cpp  state_encoder.hpp  test_encoding.cpp  tokenizer.cpp  tokenizer.hpp  vision_encoder.cpp  vision_encoder.hpp
nn/: CMakeLists.txt  GEMINI.md  build_log.txt  build_log_2.txt  scratch.cpp  test_binary_curve.cpp  user.md  verified.md
nn/.gemini/: settings.json
nn/config/: model_config.hpp
nn/core/: CMakeLists.txt  activations.cpp  activations.hpp  log.hpp  normalization.cpp  normalization.hpp
nn/core/execution/: fused_pipeline.cpp  fused_pipeline.hpp  importance.cpp  importance.hpp  latent_adapter.cpp  latent_adapter.hpp  multimodal_engine.cpp  multimodal_engine.hpp  route_planner.cpp  route_planner.hpp  silicon_automation.cpp  silicon_automation.hpp  silicon_memory.cpp  silicon_memory.hpp  wavefront_router.cpp  wavefront_router.hpp
nn/core/layers/: glr.cpp  glr.hpp  halting.cpp  halting.hpp  mlp.cpp  mlp.hpp  sla.cpp  sla.hpp  ssm.cpp  ssm.hpp
nn/core/linalg/: hashed_router.cpp  hashed_router.hpp  mx_linear.cpp  mx_linear.hpp
nn/core/simd/: avx2_kernels.cpp  avx2_kernels.hpp  avx2_math.hpp  avx512_kernels.cpp  avx512_kernels.hpp  avx512_math.hpp  avx512_vnni.cpp  avx512_vnni.hpp  cache_policy.hpp  dispatch.cpp  dispatch.hpp  memory.hpp
nn/core/spectral/: fwht.cpp  fwht.hpp  kronecker_rls.cpp  kronecker_rls.hpp  spectral_logic.cpp  spectral_logic.hpp
nn/core/vision/: scanner.cpp  scanner.hpp  spectral_pruner.cpp  spectral_pruner.hpp
nn/docs/: advice.md  done.md  job.md  plan.md
nn/tests/: CMakeLists.txt  autogenerate.py  autotest.hpp  test_agentic_cli.cpp  test_auto.cpp  test_auto_generated.cpp  test_cognitive.cpp  test_final.cpp  test_final_hardening.cpp  test_freedom_refactor.cpp  test_full_response.cpp  test_geometric_randomness.cpp  test_geometric_schema_benchmark.cpp  test_geometric_translation.cpp  test_geometric_wavefront.cpp  test_gup.cpp  test_intelligence_audit.cpp  test_memory_compression.cpp  test_memory_localization.cpp  test_multi_agent_cost.cpp  test_phase0.cpp  test_phase1_rmsnorm.cpp  test_phase2_activations.cpp  test_phase3_vnni.cpp  test_phase4_glr.cpp  test_pipeline.cpp  test_profiling.cpp  test_robustness.cpp  test_silicon_indexer.cpp  test_silicon_swarm.cpp  test_silicon_ui.cpp  test_silicon_writing.cpp  test_spectral.cpp  test_speed.cpp  test_stability_audit.cpp  test_torch_integration.cpp  test_transformer_killer.cpp  test_vision_branding.cpp  test_visual_reasoning.cpp  test_zero_error_integration.cpp
research_paper/: AGENTIC_IDE.md  BENCHMARK_REPORT.md  BIT_LEVEL_INTELLIGENCE.md  GEOMETRIC_SCHEMA.md  GEOMETRIC_SCHEMA_MIGRATION.md  HARDWARE_SATURATION.md  INDEX.md  MATH_FOUNDATIONS.md  NCA_Aether_Pipeline.md  SILICON_SWARM.md  curve_weight_analysis.md
training/: CMakeLists.txt  ai_ide_trainer.cpp  bit_trainer.cpp  code_streamer.cpp  code_streamer.hpp  deep_translator.cpp  deep_translator.hpp  download_pretrained.py  fidelity_test.cpp  gguf_metadata.json  gguf_translator.py  offline_trainer.cpp  ppo_trainer.cpp  ppo_trainer.hpp  universal_dump.py  visual_trainer.cpp  weight_adapter.cpp  weight_adapter.hpp
